--- a/aula8/projeto_site/style.css
+++ b/aula8/projeto_site/style.css
@@ -1,3 +1,11 @@
 img {
-    width: 50%;
+    width: 30%;
 } 
+
+body {
+    background-color: lightslategrey
+}
+
+.resultado{
+    text-align: center;
+}
